--- a/portfolio.html
+++ b/portfolio.html
@@ -300,14 +300,26 @@
           <li class="right-subscribe">
             <form>
               <p class="right-subscribe__text">Подпишитесь на рассылку</p>
-              <label class="right-subscribe__label">
-                <input class="right-subscribe__input" type="email" name="email" placeholder="E-mail" />
+              <div class="right-subscribe__form_position">
+                <label class="right-subscribe__label">
+                  <input
+                    class="right-subscribe__input"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                  />
+                </label>
+
                 <button class="right-subscribe__btn-submit" type="submit">
-                  Подписаться<svg class="right-subscribe__icon-send" width="24" height="24">
+                  Подписаться<svg
+                    class="right-subscribe__icon-send"
+                    width="24"
+                    height="24"
+                  >
                     <use href="./images/icons.svg#icon-icon-send"></use>
                   </svg>
                 </button>
-              </label>
+              </div>
             </form>
           </li>
         </ul>
