--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <nav class="nav-container">
           <a class="nav-container__logo" href="./index.html"
@@ -70,7 +70,7 @@
           </ul>
         </nav>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <section class="hero">
@@ -137,7 +137,7 @@
         </div>
       </section>
 
-      <!-- <section class="works">
+      <section class="works">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="works-list">
@@ -167,7 +167,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <section class="command">
         <div class="container">
@@ -337,7 +337,7 @@
         </div>
       </section>
 
-      <!-- <section class="clients">
+      <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients-list">
@@ -385,10 +385,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <ul class="footer-content">
           <li>
@@ -494,7 +494,7 @@
           </li>
         </ul>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
