--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
           </ul>
         </nav>
       </div>
-      <button type="button" class="menu-open-btn">
-        <svg width="40" height="40">
-          <use href="./images/icons.svg#open-menu-icon"></use>
-        </svg>
-      </button>
-
+      <div class="container-btn">
+        <button type="button" class="menu-open-btn">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#open-menu-icon"></use>
+          </svg>
+        </button>
+      </div>
       <div class="mob-menu is-hidden">
         <div class="container mob-menu__container">
           <div class="mob-menu__top">
